--- a/style/index.html
+++ b/style/index.html
@@ -8,15 +8,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STYLE DYNAMIQUE</title>
+    <style>
+        .class1 {
+            background-color: rgb(128, 1, 167);
+        }
+        .class2 {
+            background-color: rgb(34, 168, 34);
+        }
+    </style>
 </head>
 <body>
-    <section id="app"class="card">
-        <!-- <p :style="{color:activeColor, fontSize:fontSize+'px'}">blablabla</p> -->
-        <section>
-            <div class="card-body" @click="selectionCard(1)" :style="{backgroundColor : selectCard1 ? 'red': 'blue' }">Card 1</div>
-            <div class="card-body" @click="selectionCard(2)" :style="{backgroundColor : selectCard2 ? 'yellow': 'purple' }">Card 2</div>
-        </section>
-    </section>
+    <!-- <section class="card">
+        <p :style="{color:activeColor, fontSize:fontSize+'px'}">blablabla</p>
+        <div class="card-body" @click="selectionCard(1)" :style="{backgroundColor : selectCard1 ? 'red': 'blue' }">Card 1</div>
+        <div class="card-body" @click="selectionCard(2)" :style="{backgroundColor : selectCard2 ? 'yellow': 'purple' }">Card 2</div>
+    </section> -->
+    <h1 class="text-center">Style dynamique des classes</h1>
+    <div id="app">
+        <div class="row row-cols-1 row-cols-md-3 g-4 m-3">
+            <div class="col">
+                <div class="card" @click="selectionCard(1)" :class="{class1: selectCard1}">
+                    <div class="card-body">
+                        <h5 class="card-title">Carte 1</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" @click="selectionCard(2)" :class="{class2: selectCard2}">
+                    <div class="card-body">
+                        <h5 class="card-title">Carte 2</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <!--! script pour contacter VUE !-->
     <script src="https://unpkg.com/vue@next"></script>
