--- a/conditional_rendering/index.html
+++ b/conditional_rendering/index.html
@@ -14,9 +14,10 @@
     <div>
         <h2>🎞️ WatchList 🎞️</h2>
         <input type="text" v-model="myFilm" class="form-control">
-        <button v-on:click="addFilm($event)">Ajouter le film</button>
-        <p v-if="listFilm.length == 0">Pas encore de film dans votre liste</p>
+        <button v-on:click="addFilm($event)" class="btn btn-info">Ajouter le film</button>
+        <p v-if="listFilm.length === 0">Pas encore de film dans votre liste</p>
         <h3 v-else >{{myFilm}}</h3>
+        <p v-for="film in listFilm">{{film}}</p>
     </div>
     
     <!--! script pour contacter VUE !-->
