modif affichage film h3

--- a/conditional_rendering/index.html
+++ b/conditional_rendering/index.html
@@ -16,7 +16,7 @@
         <input type="text" v-model="myFilm" class="form-control">
         <button v-on:click="addFilm()" class="btn btn-info">Ajouter le film</button>
         <p v-if="listFilm.length === 0">Pas encore de film dans votre liste</p>
-        <h3 v-else >{{myFilm}}</h3>
+        <h3 v-else >{{listFilm[listFilm.length-1]}}</h3>
         <p v-for="film in listFilm">{{film}}</p>
     </div>
     
